--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="w-full h-full">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,13 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
 </head>
-<body class="bg-blue-100 w-full h-full flex justify-center items-center text-4xl font-bold ">
-    <h1 class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500">Marcus Gallegos & Jazmin Barraza
-    </h1>
+
+<body class="bg-blue-100 w-full h-full flex justify-center items-center text-4xl font-black ">
     
+    <h1 class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500">Marcus Gallegos &
+        Jazmin Barraza
+    </h1>
+
 </body>
+
 </html>
